<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/Azul_osc"
    tools:context="ui.CrearEvento">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/LayoutCrear"
        android:layout_width="336dp"
        android:layout_height="527dp"
        android:layout_marginTop="20dp"
        android:background="@color/Azul"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/EtiquetaDetalles">

        <EditText
            android:id="@+id/InputLocalidadEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/n_localidad_evento"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputNombreEvento" />

        <EditText
            android:id="@+id/InputNombreEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/n_nombre_evento"
            android:inputType="textPersonName"
            android:minHeight="48dp"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.505"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <EditText
            android:id="@+id/InputDescripcionEvento"
            android:layout_width="wrap_content"
            android:layout_height="65dp"
            android:layout_marginTop="44dp"
            android:background="@color/white"
            android:ems="10"
            android:gravity="start|top"
            android:hint="@string/n_descripcion_evento"
            android:inputType="textMultiLine"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputFechaEvento" />

        <EditText
            android:id="@+id/InputFechaEvento"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:background="@color/white"
            android:ems="10"
            android:hint="@string/n_fecha_inicio_evento"
            android:inputType="date"
            android:minHeight="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputLocalidadEvento" />

        <RadioGroup
            android:id="@+id/TipoLocalidad"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="48dp"
            android:checkedButton="@id/OpcionMunicipio"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.502"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputDescripcionEvento">

            <RadioButton
                android:id="@+id/OpcionMunicipio"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="4dp"
                android:text="@string/n_municipio"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

            <RadioButton
                android:id="@+id/OpcionMontana"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/n_montana"
                android:textColor="@color/white"
                android:textSize="18sp"
                android:textStyle="bold" />

        </RadioGroup>

        <TextView
            android:id="@+id/EtiquetaTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginStart="24dp"
            android:layout_marginTop="16dp"
            android:text="@string/n_tipo_localidad"
            android:textColor="@color/white"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/InputDescripcionEvento" />
    </androidx.constraintlayout.widget.ConstraintLayout>

    <Button
        android:id="@+id/BotonCrear"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="28dp"
        android:backgroundTint="@color/teal_700"
        android:text="@string/n_etiqueta_crear"
        app:cornerRadius="10sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.498"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/LayoutCrear" />

    <TextView
        android:id="@+id/EtiquetaDetalles"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="56dp"
        android:text="@string/n_etiqueta_evento"
        android:textColor="@color/white"
        android:textSize="24sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.497"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>