<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/consultaEventos"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context=".ui.ListaEventos.ConsultaEventosFragment">

    <com.google.android.material.tabs.TabLayout
        android:id="@+id/tab_eventos"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:backgroundTint="@color/Azul_osc"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/spinnerFiltrado"
        app:tabIndicatorColor="@color/teal_200"
        app:tabSelectedTextColor="@color/teal_200"
        app:tabTextColor="@color/white_50">

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/municipios" />

        <com.google.android.material.tabs.TabItem
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/montanas" />

    </com.google.android.material.tabs.TabLayout>

    <FrameLayout
        android:id="@+id/child_ConsultarEventos"
        android:name="androidx.navigation.fragment.child_ListaEventos"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:defaultNavHost="true"
        android:backgroundTint="@color/Azul_osc"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tab_eventos"
        app:navGraph="@navigation/mobile_navigation">

    </FrameLayout>

    <Spinner
        android:id="@+id/spinnerFiltrado"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:minHeight="32dp"
        android:textAlignment="textEnd"
        android:backgroundTint="@color/teal_200"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textView3"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="5dp"
        android:text="@string/ordenar_por"
        android:textSize="20sp"
        app:layout_constraintBottom_toBottomOf="@+id/spinnerFiltrado"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="@+id/spinnerFiltrado"
        app:layout_constraintVertical_bias="1.0" />


</androidx.constraintlayout.widget.ConstraintLayout>